# relancers

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  build.rs  deny.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml
benches/: conversion_benchmark.rs  criterion.rs
src/: lib.rs
src/coding/: coeff_generator.rs  mod.rs  sparse.rs  traits.rs
src/coding/reed_solomon/: decoder.rs  encoder.rs  mod.rs
src/coding/rlnc/: decoder.rs  encoder.rs  mod.rs  optimized_matrix.rs  seed_encoder.rs  sparse_encoder.rs
src/storage/: mod.rs  symbol.rs
src/utils/: mod.rs  rand.rs
